# UrbanReconstruction

./: README.md
building_reconstruction/: Algo_reconstruction.cpp  Algo_reconstruction.h  Building_reconstruction.cpp  Building_reconstruction.h  CMakeCache.txt  CMakeLists.txt  Index_map.h  Surface_reconstruction.cpp  Surface_reconstruction.h  building_reconstruction.cpp  building_reconstruction_example  building_reconstruction_example.cpp  metric_image_compare_example.cpp  polyfit_example_with_region_growing.cpp  polyfit_example_without_input_planes.cpp  surface_reconstruction.cpp  surface_reconstruction_example.cpp  texturing_map_example.cpp
building_reconstruction/Geometry/: Geometry_pcl.cpp  Geometry_pcl.h
building_reconstruction/IO/: Io_cgal.cpp  Io_cgal.h  Io_pcl.cpp  Io_pcl.h
building_reconstruction/Metrics/: BlurEstimation.cpp  BlurEstimation.h  Metrics.cpp  Metrics.h
building_reconstruction/PointClouds/: Shift.cpp  Shift.h
building_reconstruction/StringUtils/: PathUtils.cpp  PathUtils.h
building_reconstruction/Texturing/: Texturing_mapping.cpp  Texturing_mapping.h
building_reconstruction/Texturing/IO/: Image_txt_reading.cpp  Image_txt_reading.h
building_reconstruction/Texturing/Image/: Lidar2depth.cpp  Lidar2depth.h  Lidar2rgb_lidar.cpp  Lidar2rgb_lidar.h  Panorama2cubemap.cpp  Panorama2cubemap.h
building_reconstruction/open3d/: Texturing.cpp  Texturing.h
data/: Construction_corner_oriented_normals_not_sample.ply  Construction_corner_region_growing2_end.ply  cloud_msr.ply  crop_hull.ply  delanay_mesh.ply  hull_mesh.ply  hull_mesh1.ply  hull_mesh1_cloud.ply  new_vertices.ply  new_vertices_noramals_cc.ply  new_vertices_normals.ply  out_af_not_sample.ply  region_growing.ply  region_growing.ply.ply  region_growing_around.ply  region_growing_not_sample.ply  region_growing_points.ply
